# cohesive_subgraph_bipartite

./: ArrayLinearHeap.h  BiCore.cpp  BiCore.h  CMakeLists.txt  Defines.h  Graph.cpp  Graph.h  LCUtility.cpp  LCUtility.h  ListLinearHeap.h  README.md  Timer.h  UniCore.cpp  UniCore.h  UnionFind.h  Utility.h  basicEnu.cpp  basicEnu.h  basicEnuSet.cpp  basicEnuSet.h  bgraph.cpp  bgraph.h  denseMBB.cpp  denseMBB.h  mBBE.cpp  mBBE.h  main.cpp  marvel  mbbp  mbbp.cbp  ooMBE.cpp  ooMBE.h  test1.txt  test2.txt  testLadj.txt  testRadj.txt
